tests/ui/borrowck/borrowck-slice-pattern-element-loan-array.stderr
error[E0502]: cannot borrow `s[..]` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-slice-pattern-element-loan-array.rs:6:13
   |
LL |     let [ref first, ref second, ..] = *s;
   |                     ---------- immutable borrow occurs here
LL |     let [_, ref mut  second2, ref mut third, ..] = *s;
   |             ^^^^^^^^^^^^^^^^ mutable borrow occurs here
LL |     nop(&[first, second, second2, third]);
   |                  ------ immutable borrow later used here

error[E0502]: cannot borrow `s[..]` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-slice-pattern-element-loan-array.rs:12:14
   |
LL |     let [.., ref fourth, ref third, _, ref first] = *s;
   |                          --------- immutable borrow occurs here
LL |     let [.., ref mut third2, _, _] = *s;
   |              ^^^^^^^^^^^^^^ mutable borrow occurs here
LL |     nop(&[first, third, third2, fourth]);
   |                  ----- immutable borrow later used here

error[E0502]: cannot borrow `s[..]` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-slice-pattern-element-loan-array.rs:19:16
   |
LL |     let [.., _, ref from_end4, ref from_end3, _, ref from_end1] = *s;
   |                 ------------- immutable borrow occurs here
LL |
LL |     let [_, _, ref mut from_begin2, ..] = *s;
   |                ^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
LL |     nop(&[from_begin2, from_end1, from_end3, from_end4]);
   |                                              --------- immutable borrow later used here

error[E0502]: cannot borrow `s[..]` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-slice-pattern-element-loan-array.rs:21:19
   |
LL |     let [.., _, ref from_end4, ref from_end3, _, ref from_end1] = *s;
   |                                ------------- immutable borrow occurs here
...
LL |     let [_, _, _, ref mut from_begin3, ..] = *s;
   |                   ^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
LL |     nop(&[from_begin3, from_end1, from_end3, from_end4]);
   |                                   --------- immutable borrow later used here

error[E0502]: cannot borrow `s[..]` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-slice-pattern-element-loan-array.rs:26:14
   |
LL |     let [ref from_begin0, ref from_begin1, _, ref from_begin3, _, ..] = *s;
   |                                               --------------- immutable borrow occurs here
LL |
LL |     let [.., ref mut from_end3, _,  _] = *s;
   |              ^^^^^^^^^^^^^^^^^ mutable borrow occurs here
LL |     nop(&[from_begin0, from_begin1, from_begin3, from_end3]);
   |                                     ----------- immutable borrow later used here

error[E0502]: cannot borrow `s[..]` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-slice-pattern-element-loan-array.rs:32:13
   |
LL |     let [ref first, ref second, ..] = *s;
   |                     ---------- immutable borrow occurs here
LL |     let [_, ref mut tail @ ..] = *s;
   |             ^^^^^^^^^^^^ mutable borrow occurs here
LL |     nop(&[first, second]);
   |                  ------ immutable borrow later used here

error[E0502]: cannot borrow `s[..]` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-slice-pattern-element-loan-array.rs:39:10
   |
LL |     let [.., ref second, ref first] = *s;
   |              ---------- immutable borrow occurs here
LL |     let [ref mut tail @ .., _] = *s;
   |          ^^^^^^^^^^^^ mutable borrow occurs here
LL |     nop(&[first, second]);
   |                  ------ immutable borrow later used here

error[E0502]: cannot borrow `s[..]` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-slice-pattern-element-loan-array.rs:46:10
   |
LL |     let [_,  ref s1 @ ..] = *s;
   |              ------ immutable borrow occurs here
LL |     let [ref mut s2 @ .., _, _] = *s;
   |          ^^^^^^^^^^ mutable borrow occurs here
LL |     nop_subslice(s1);
   |                  -- immutable borrow later used here

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0502`.
